# bug_robot

./: README.md
bug_robot_algorithms/: CMakeLists.txt  package.xml
bug_robot_algorithms/launch/: bug0.launch  bug0_pre.launch  bug1_pre.launch
bug_robot_algorithms/scripts/: bug0_algorithm.py  bug1_algorithm.py  bug2_algorithm.py  go_to_point.py  laser_read.py  obstacle_avoidance.py  wall_following.py
bug_robot_description/: CMakeLists.txt  package.xml
bug_robot_description/launch/: bug_world.launch  controller.launch  controller.yaml  display.launch  gazebo.launch  rviz.launch  urdf.rviz
bug_robot_description/maps/: .pgm  .yaml  gmapping_map.pgm  gmapping_map.yaml  hector_map.yaml
bug_robot_description/meshes/: arduino_1.stl  base_link.stl  camera_1.stl  l298n_1.stl  l_caster_1.stl  l_wheel_1.stl  left_wheel_1.stl  lidar_1.stl  motor_driver_1.stl  r_caster_1.stl  r_wheel_1.stl  rasp_pi_1.stl  right_wheel_1.stl
bug_robot_description/urdf/: bug_robot.gazebo  bug_robot.trans  bug_robot.xacro  materials.xacro  navigation.gazebo  navigation.xacro
bug_robot_description/worlds/: bug_obstacle.world  bug_world.world
bug_robot_navigation/: CMakeLists.txt  package.xml
bug_robot_navigation/launch/: amcl.launch  controller.launch  controller.yaml  hector_slam.launch  movebase.launch  navigation.launch  rmp_world.yaml  slam_config.rviz
bug_robot_navigation/param/: costmap_common_params.yaml
bug_robot_navigation/rviz/: amcl.rviz
bug_robot_navigation/scripts/: go_to_point.py  laser_reading.py  obstacle_avoidance.py  (+1 more)
resources/: inertia_calculator.py
(+2 files in other folders)
