<?xml version="1.0"?>
<package format="2">
  <name>bug_robot_algorithms</name>
  <version>0.0.0</version>
  <description>The bug_robot_algorithms package</description>

  <maintainer email="nilutpolkashyap@gmail.com">Nilutpol Kashyap</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>

  </export>
</package>
